--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,3 +13,21 @@ body {
   font-family: "Pretendard", ui-sans-serif;
   @apply bg-lightBackground text-lightText dark:bg-darkBackground dark:text-darkText;
 }
+
+::-webkit-scrollbar {
+  width: 4px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent !important;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(57, 148, 255, 0.7);
+  border-radius: 4px;
+}
+
+/* 스크롤바 핸들 호버 효과 */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
