Feat: 차트 셀렉터 수정

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,3 +32,13 @@ body {
   background: #555;
 }
 
+table {
+  width: 100%;
+  border-collapse: collapse;
+  table-layout: fixed;
+}
+th,
+td {
+  text-align: left;
+  padding: 0.5rem;
+}
